27.06.2020
    - Midi patch popup menu: Include patch number in the items' text. (Tim)
26.06.2020
    - Fixed bug left over from 21.01.2019: Midi controller graphs: Drag n drop broken. (Tim)
      Items were wrongly being erased after dropping.
    - Fixed issue 830: Wave Editor: Copy-on-write always triggered. Error from 01.01.2020
    - Fixed issue 831: Compressed song files (.gz,.bz2): Blank song on load. Error from 01.01.2020
25.06.2020
    - Some rework of mixer strip shortcuts. They now work in both Arranger and Mixer.
      Default shortcuts are Alt + Arrow keys to affect selected strip(s) (rj)
22.06.2020
    - Fix slider/meter groove misalignment in mixer strip. (kybos)
20.06.2020
    - Cmake option changes (Tim): Removed ancient ENABLE_VST and ENABLE_EXPERIMENTAL,
       and dangerous ENABLE_LV2_MAKE_PATH, and enabled ENABLE_PYTHON by default since
       it has been thoroughly updated. No code removed. PLEASE REBUILD your MusE !
19.06.2020
    - Fixed long-time meter and slider scale mis-alignment. New stylesheet property meterSpacing. (Tim)
    - Midi controller graphs: Fixed no repaint when adjusting vertical splitters.
      Clear WA_StaticContents in CtrlCanvas ctor - need full update because contents scale.
    - Midi controller graphs: Moved 'Add ctrl' button from bottom area to menu and toolbar as well.
18.06.2020
    - Mixer + strips: Replace hard-coded shortcuts with configurable ones. Several weren't working. (Tim)
      New mixer shortcut category.
    - Updated Simpledrums so all parameters update a status field, previously
      it was impossible to know what the dials were set to. Changing the look
      of the dials would also be a good idea, left to do. (rj)
17.06.2020
    - Fix main window being too small on large screens when MusE is started for the first time. 
      The size and position are now adjusted dynamically for the current screen size. (kybos)