@@ -103,6 +103,7 @@
         <file>svg/tracktype.svg</file>
         <file>svg/mixerstrip.svg</file>
         <file>svg/drop_down_triangle.svg</file>
+        <file>svg/expand_left_right.svg</file>
         <file>svg/down_vee.svg</file>
         <file>svg/up_vee.svg</file>
         <file>svg/arrow_up.svg</file>
