@@ -1,5 +1,6 @@
 27.06.2020
     - Midi patch popup menu: Include patch number in the items' text. (Tim)
+    - Mixer strip labels: Added popup 'expand' button, to expand/close the strips.
 26.06.2020
     - Fixed bug left over from 21.01.2019: Midi controller graphs: Drag n drop broken. (Tim)
       Items were wrongly being erased after dropping.
